[project]
name = "logs"
version = "0.1.0"
description = "統一日誌管理模組 - 提供統一、可配置的日誌記錄解決方案"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
email = []  # Email 功能使用標準庫，無需額外依賴

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logs"]

[tool.hatch.build]
include = ["logs/**/*.py"]

